# Paint-CG

./: .gitignore  Botao.cpp  Botao.h  CMakeLists.txt  Controlador.cpp  Controlador.h  Ferramenta.h  FerramentaLinha.h  FerramentaPincel.h  FerramentaPoligono.h  FerramentaSelecao.h  Forma.h  Instrucao-comp.txt  LinhaForma.h  Persistencia.cpp  Persistencia.h  PoligonoForma.h  PontoForma.h  Readme.md  main.cpp  paint
ferramentas/: Ferramenta.h  FerramentaLinha.h  FerramentaPincel.h  FerramentaPoligono.h  FerramentaPonto.h  FerramentaSelecao.h
formas/: Forma.h  LinhaForma.h  PoligonoForma.h  PontoForma.h
